--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <li><a href = "index.html">Home</a></li>
                 <li>Pets</li>
                 <li>Recipes</li>
-                <li>Travel</li>
+                <li><a href="travel.html">Travel</a></li>
             </ul>
         </nav>
         <h1>Week Two discussion</h1>
