--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li>Pets</li>
-                <li>Recipes</li>
+                <li><a href="pets.html">Pets</li>
+                <li><a href="recipes.html">Recipes</li>
                 <li><a href="travel.html">Travel</a></li>
             </ul>
         </nav>
