--- a/travel.html
+++ b/travel.html
@@ -15,7 +15,7 @@
         <img
           src="images/yellowstone_travertine.JPG"
           width="400"
-          alt="Brown labradoodle wearing colorful lei"
+          alt="A large mound of multi-colored travertine"
         />
 
         <p>
